test/corpus/blocks.txt
==================
Blocks / Lambdas
==================

\ x -> x
\ x -> { return x }
\ x, y -> x + y
list.map( \ x -> x )

---

(source_file
  (expression_statement (lambda_expression (parameter (identifier)) (identifier)))
  (expression_statement (lambda_expression (parameter (identifier)) (block (return_statement (identifier)))))
  (expression_statement (lambda_expression (parameter (identifier)) (parameter (identifier)) (binary_expression (identifier) (identifier))))
  (expression_statement (call_expression (member_access (identifier) (identifier)) (argument_list (lambda_expression (parameter (identifier)) (identifier)))))
)
