test/corpus/statements.txt
==================
Variables & Expressions
==================

var x: int = 10;
var y = x + 5;
y = y * 2;
var z = a == b;
!x;
-123;

---

(source_file
  (local_variable_declaration (identifier) (primitive_type) (number_literal))
  (local_variable_declaration (identifier) (binary_expression (identifier) (number_literal)))
  (expression_statement (assignment_expression (identifier) (binary_expression (identifier) (number_literal))))
  (local_variable_declaration (identifier) (binary_expression (identifier) (identifier)))
  (expression_statement (unary_expression (identifier)))
  (expression_statement (unary_expression (number_literal)))
)
